--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,8 +116,8 @@ jobs:
       - name: Single integration test against cloud
         run: 'go test -v --count 1 -p 1 . -run "TestIntegrationSuite/TestBasic$"'
         working-directory: test
-      - name: Cloud integration tests
-        run: 'go test -v --count 1 -p 1 . -run "TestCloudSuite/.*" -cloud-tests'
+      - name: Cloud operations tests
+        run: 'go test -v --count 1 -p 1 . -run "TestCloudOperationsSuite/.*" -cloud-operations-tests'
         working-directory: test
 
   features-test:
