--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,8 @@ jobs:
       - name: Docker compose - integration tests
         if: ${{ matrix.testDockerCompose }}
         run: go run . integration-test
+        env:
+          DISABLE_NEXUS_TESTS: "1"
         working-directory: ./internal/cmd/build
 
   cloud-test:
