Build omes image per-pr

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,3 +129,12 @@ jobs:
       go-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
       version-is-repo-ref: true
+
+  omes-image-build:
+    uses: temporalio/omes/.github/workflows/docker-images.yml@build-local-sdk-images
+    with:
+      lang: go
+      sdk-repo-url: ${{github.event.pull_request.head.repo.full_name}}
+      sdk-repo-ref: ${{github.event.pull_request.head.ref}}
+      omes-repo-ref: build-local-sdk-images
+
