--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,4 +136,6 @@ jobs:
       lang: go
       sdk-repo-url: ${{github.event.pull_request.head.repo.full_name}}
       sdk-repo-ref: ${{github.event.pull_request.head.ref}}
-
+      # TODO: Remove once we have a good way of cleaning up sha-based pushed images
+      docker-tag-ext: ci-latest
+      do-push: true
