Add secret inherit line

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -132,6 +132,7 @@ jobs:
 
   omes-image-build:
     uses: temporalio/omes/.github/workflows/docker-images.yml@main
+    secrets: inherit
     with:
       lang: go
       sdk-repo-url: ${{github.event.pull_request.head.repo.full_name}}
