--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -129,3 +129,14 @@ jobs:
       go-repo-path: ${{github.event.pull_request.head.repo.full_name}}
       version: ${{github.event.pull_request.head.ref}}
       version-is-repo-ref: true
+
+  omes-image-build:
+    uses: temporalio/omes/.github/workflows/docker-images.yml@main
+    secrets: inherit
+    with:
+      lang: go
+      sdk-repo-url: ${{github.event.pull_request.head.repo.full_name}}
+      sdk-repo-ref: ${{github.event.pull_request.head.ref}}
+      # TODO: Remove once we have a good way of cleaning up sha-based pushed images
+      docker-tag-ext: ci-latest
+      do-push: true
