--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             
     runs-on: ${{ matrix.runsOn || matrix.os }}
     env:
-      GOTOOLCHAIN: "local"
+      GOTOOLCHAIN: local
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +42,7 @@ jobs:
         run: go run . check
         working-directory: ./internal/cmd/build
         env:
-          GOTOOLCHAIN: "local"
+          GOTOOLCHAIN: local
 
       - name: Unit test
         run: go run . unit-test -coverage=${{ matrix.uploadCoverage && 'true' || 'false' }}
