--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-intel, macos-arm, windows-latest]
-        go-version: ["oldstable", "stable"]
+        go-version: ["1.23", "1.22"]
         include:
           - os: ubuntu-latest
             go-version: "stable"
@@ -25,8 +25,6 @@ jobs:
             runsOn: macos-14
             
     runs-on: ${{ matrix.runsOn || matrix.os }}
-    env:
-      GOTOOLCHAIN: local
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,7 +40,7 @@ jobs:
         run: go run . check
         working-directory: ./internal/cmd/build
         env:
-          GOTOOLCHAIN: local
+          GOTOOLCHAIN: ${{ matrix.go-version }}
 
       - name: Unit test
         run: go run . unit-test -coverage=${{ matrix.uploadCoverage && 'true' || 'false' }}
