--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,6 +91,8 @@ jobs:
         env:
           # TODO(bergundy): Remove this flag once server 1.25.0 is out.
           DISABLE_NEXUS_TESTS: "1"
+          # TODO(bergundy): Remove this flag too once server 1.25.0 is out. Thanks Roey! :)
+          DISABLE_BACKLOG_STATS_TESTS: "1"
         working-directory: ./internal/cmd/build
 
   cloud-test:
