First real integration tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,9 @@ jobs:
       - name: Docker compose - integration tests
         if: ${{ matrix.testDockerCompose }}
         run: go run . integration-test
+        env:
+          # TODO(antlai-temporal): Remove this flag once server 1.26.2 released.
+          DISABLE_DEPLOYMENT_TESTS: "1"
         working-directory: ./internal/cmd/build
 
   cloud-test:
