--- a/.github/workflows/check-api-go.yml
+++ b/.github/workflows/check-api-go.yml
@@ -3,12 +3,22 @@ name: Check api-go compatibility
 on:
   workflow_dispatch:
     inputs:
-      sdk_commit:
-        description: sdk-go commit to check
+      sdk_ref:
+        description: sdk-go ref to check ("latest" for latest release tag)
+        required: true
+        default: latest
+      api_ref:
+        description: api-go ref to check
         required: true
         default: master
-      api_commit:
-        description: api-go commit to check
+  workflow_call:
+    inputs:
+      sdk_ref:
+        description: sdk-go ref to check ("latest" for latest release tag)
+        required: true
+        default: latest
+      api_ref:
+        description: api-go ref to check
         required: true
         default: master
 
@@ -18,22 +28,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Generate token
-        id: generate_token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.TEMPORAL_CICD_APP_ID }}
-          private-key: ${{ secrets.TEMPORAL_CICD_PRIVATE_KEY }}
-          owner: ${{ github.repository_owner }}
+      - name: Parse inputs
+        id: inputs
+        env:
+          GH_TOKEN: ${{ github.token }}
+          SDK_REF: ${{ inputs.sdk_ref }}
+          API_REF: ${{ inputs.api_ref }}
+        run: |
+          if [[ "$SDK_REF" == "latest" ]]; then
+            SDK_REF=$(gh api /repos/temporalio/sdk-go/releases/latest --jq '.name')
+          fi
+          if ! gh api "/repos/temporalio/sdk-go/commits/$SDK_REF"; then
+            echo "::error::Reference $SDK_REF not found in sdk-go"
+            exit 1
+          fi
+          if ! gh api "/repos/temporalio/api-go/commits/$API_REF"; then
+            echo "::error::Reference $API_REF not found in api-go"
+            exit 1
+          fi
+          echo "SDK_REF=$SDK_REF" >> "$GITHUB_OUTPUT"
+          echo "API_REF=$API_REF" >> "$GITHUB_OUTPUT"
 
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.sdk_commit }}
-          token: ${{ steps.generate_token.outputs.token }}
-          persist-credentials: true
-          fetch-depth: 0
-          fetch-tags: true
+          repo: temporalio/sdk-go
+          ref: ${{ steps.inputs.outputs.SDK_REF }}
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -42,15 +62,11 @@ jobs:
 
       - name: Update api-go
         env:
-          GH_TOKEN: ${{ steps.generate_token.outputs.token }}
-          API_COMMIT: ${{ inputs.api_commit }}
+          API_REF: ${{ steps.inputs.outputs.API_REF }}
         run: |
-          # check commit exists
-          gh api "/repos/temporalio/api-go/commits/${API_COMMIT}" || exit 1
-          # update all go.mod
           for f in $(find . -iname go.mod); do
             cd $(dirname $f)
-            go get go.temporal.io/api@${API_COMMIT}
+            go get go.temporal.io/api@$API_REF
             go mod tidy
             cd -
           done
